--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,108 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+
+.dark-mode{
+  background-color: #140f07;
+
+}
+
+.dark-mode h1{
+  color: whitesmoke;
+}
+
+.container{
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+  min-height: 100vh;
+}
+
+.noteslist{
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+
+
+}
+
+
+.notenew{
+  background:#78D6C6;
+  border-radius: 10px;
+  padding: 1rem;
+  min-height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+textarea{
+  border: none;
+  resize: none;
+  background:#78D6C6;
+}
+
+textarea:focus{
+  outline: none;
+
+}
+
+.save{
+  background:#edffff;
+  border: none;
+  border-radius: 12px;
+  padding: 5px 10px 5px 10px;
+}
+
+.save:hover{
+  background-color:#daffd3;
+  cursor: pointer;
+}
+
+.note{
+  background-color:#77baff;
+  border-radius: 10px;
+  padding: 1rem;
+  min-height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  white-space:pre-wrap;
+}
+
+.notefooter{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+
+}
+
+
+
+.search{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color:#f6f6f2;
+  border-radius: 13px;
+  padding: 5px;
+  margin-bottom: 2rem;
+}
+
+.search input{
+  border: none;
+  background-color:#f6f6f2;
+}
+
+.search input:focus {
+  outline:none;
+}
